--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+Товаров в корзине: {{ basket_len }}
 <h6 align="right">{% now "jS F Y H:i" %}</h6>
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
