--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -43,6 +43,9 @@
             <div class="card-footer text-center">
                 <div class="small"><a href="{% url 'users:register' %}">Нужен аккаунт? Зарегистрируйся!</a></div>
             </div>
+            <button class="btn btn-round form-control">
+                <a href="{% url 'social:begin' 'vk-oauth2' %}?next=/">Вход через ВКонтакте</a>
+            </button>
         </div>
     </div>
 {% endblock %}
