--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -61,6 +61,20 @@
                         </div>
                     </div>
                     <div class="form-row">
+                        <div class="col-lg-6">
+                            <label class="small mb-1" for="{{ form_two.tagline.id_for_label }}">Теги</label>
+                            {{ form_two.tagline }}
+                        </div>
+                        <div class="col-lg-6">
+                            <label class="small mb-1" for="{{ form_two.about_me.id_for_label }}">О себе</label>
+                            {{ form_two.about_me }}
+                        </div>
+                        <div class="col-lg-6">
+                            <label class="small mb-1" for="{{ form_two.gender.id_for_label }}">Пол</label>
+                            {{ form_two.gender }}
+                        </div>
+                    </div>
+                    <div class="form-row">
                         <div class="col-lg-12" style="margin-top: 33px;">
                             <input class="btn btn-info btn-block" type="submit" value="Сохранить">
                         </div>
