--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -26,7 +26,7 @@
                 </div>
                 <form action="{% url 'users:profile' %}" method="post" enctype="multipart/form-data">
                     {% csrf_token %}
-                    <div class="form-row">
+                    <div class="row">
                         <div class="col-lg-6">
                             <div class="form-group">
                                 <label class="small mb-1" for="{{ form.first_name.id_for_label }}">Имя</label>
@@ -40,16 +40,15 @@
                             </div>
                         </div>
                     </div>
-                    <div class="form-row mb-2">
+                    <div class="row mb-2">
                         <div class="col-lg-12">
                             <div class="custom-file">
+                                <label class="custom-file-label" for="{{ form.image.id_for_label }}"></label>
                                 {{ form.image }}
-                                <label class="custom-file-label" for="{{ form.image.id_for_label }}">Выберите
-                                    изображение</label>
                             </div>
                         </div>
                     </div>
-                    <div class="form-row">
+                    <div class="row">
                         <div class="col-lg-6">
                             <label class="small mb-1" for="{{ form.username.id_for_label }}">Имя пользователя</label>
                             {{ form.username }}
@@ -60,7 +59,7 @@
                             {{ form.email }}
                         </div>
                     </div>
-                    <div class="form-row">
+                    <div class="row">
                         <div class="col-lg-6">
                             <label class="small mb-1" for="{{ form_two.tagline.id_for_label }}">Теги</label>
                             {{ form_two.tagline }}
@@ -74,7 +73,7 @@
                             {{ form_two.gender }}
                         </div>
                     </div>
-                    <div class="form-row">
+                    <div class="row">
                         <div class="col-lg-12" style="margin-top: 33px;">
                             <input class="btn btn-info btn-block" type="submit" value="Сохранить">
                         </div>
