--- a/ordersapp/templates/ordersapp/order_confirm_delete.html
+++ b/ordersapp/templates/ordersapp/order_confirm_delete.html
@@ -11,9 +11,9 @@
        {% include 'ordersapp/includes/inc_order_summary.html' %}
        <form action="{% url 'ordersapp:delete' object.pk %}" method="post">
            {% csrf_token %}
-           <input class="btn btn-danger" type="submit" value="удалить">
+           <input class="btn btn-danger btn-round form-control last" type="submit" value="удалить">
        </form>
-       <button class="btn btn-success">
+       <button class="btn btn-success btn-round form-control last">
            <a href="{% url 'ordersapp:order_list' %}">отмена</a>
        </button>
    </div>
