updating order statistics via jQuery and added «django-dynamic-formset»

--- a/products/templates/products/base.html
+++ b/products/templates/products/base.html
@@ -90,7 +90,8 @@
 <script src="{% static 'vendor/fontawesome/fontawesome-icons.js' %}" crossorigin="anonymous"></script>
 
 <script src="{% static 'js/basket.js' %}"></script>
-<script src="{% static 'js/order.js' %}"></script>
+<script src="{% static 'js/orders_scripts.js' %}"></script>
+<script src="{% static 'js/jquery.formset.js' %}"></script>
 
 </body>
 
