--- a/ordersapp/templates/ordersapp/includes/inc_order_summary.html
+++ b/ordersapp/templates/ordersapp/includes/inc_order_summary.html
@@ -14,15 +14,13 @@
    </div>
 {% else %}
    <div class="h2">Новый заказ</div>
-   <hr>
-   <div class="h4">заказчик: {{ user.last_name }} {{ user.first_name }} </div>
-   {% if basket.0 %}
-       <div class="h4">
-           Всего товаров: <span class="order_total_quantity">{{ basket.0.get_total_quantity }}</span>
-       </div>
-       <div class="h3">
-           Общая стоимость: <span class="order_total_cost">{{ basket.0.get_total_cost }}</span> руб
-       </div>
-   {% endif %}
+    <hr>
+    <div class="h4">Заказчик: {{ user.last_name }} {{ user.first_name }} </div>
+        <div class="h4">
+            Всего товаров: <span class="order_total_quantity"></span>
+        </div>
+        <div class="h3">
+            Общая стоимость: <span class="order_total_cost"></span> руб.
+        </div>
 {% endif %}
 <hr> 
